# donutbrowser

./: .env.example  .envrc  .gitignore  .prettierignore  AGENTS.md  AI_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  LICENSE  README.md  SECURITY.md  _typos.toml  biome.json  components.json  eslint.config.mjs  flake.nix  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rename-binary.sh  tailwind.config.js  tsconfig.json
.cursor/rules/: always-test-before-summary.mdc  no-random-colors  no-useless-comments.mdc  no-useless-duplication.mdc  nodecar-modifications.mdc  tests-and-linting-after-changes.mdc  use-singletons
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-feature-request.md  bug-report.yml  config.yml  feature-request.yml
.github/prompts/: issue-validation.prompt.yml  pr-review.prompt.yml  release-notes.prompt.yml  telegram-release-summary.prompt.yml
.github/workflows/: app-e2e.yml  changelog.yml  codeql.yml  compliance-close.yml  contributors.yml  dependabot-automerge.yml  docker-sync.yml  duplicate-issues.yml  flake-test.yml  greetings.yml  issue-compliance.yml  issue-validation.yml  lint-js.yml  lint-rs.yml  notify-telegram.yml  osv.yml  pr-checks.yml  publish-repos.yml  release-notes-generator.yml  release.yml  rolling-release.yml  spellcheck.yml  stale.yml  sync-e2e.yml
.husky/: pre-push
docs/: self-hosting-donut-sync.md
donut-sync/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  nixpacks.toml  package.json  tsconfig.json
donut-sync/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  main.ts
donut-sync/test/: app.e2e-spec.ts  jest-e2e.json  sync.e2e-spec.ts  test-env.ts
e2e/: README.md  coverage-map.mjs  run.mjs
e2e/app/: Cargo.toml
e2e/app/src/: main.rs
e2e/lib/: app.mjs  cdp.mjs  diagnostics.mjs  fixtures.mjs  webdriver.mjs
e2e/tests/: browser.test.mjs  coverage.test.mjs  diagnostics.test.mjs  entities.test.mjs  integrations.test.mjs  network.test.mjs  smoke.test.mjs  sync.test.mjs  ui.test.mjs
nodecar/: copy-binary.sh  eslint.config.mjs  package.json  pnpm-lock.yaml  rename-binary.js  tsconfig.json
nodecar/src/: camoufox-launcher.ts  camoufox-storage.ts  camoufox-worker.ts  index.ts  proxy-runner.ts  proxy-storage.ts  proxy-worker.ts  proxy.ts  utils.ts
scripts/: dev.sh  openvpn-test-harness.mjs  publish-repo.sh  redact-sensitive-text.mjs  run-with-env.mjs  sync-test-harness.mjs
src/: types.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  app.rc  build.rs  copy-proxy-binary.mjs  copy-proxy-binary.sh  donutbrowser.desktop  entitlements.plist  installer-hooks.nsh  tauri.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/assets/: template.pac
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_client.rs  api_server.rs  app_auto_updater.rs  app_dirs.rs  auto_updater.rs  browser.rs  browser_runner.rs  browser_version_manager.rs  browser_version_service.rs  camoufox.rs  camoufox_direct.rs  camoufox_manager.rs  cloud_auth.rs  commercial_license.rs  cookie_manager.rs  daemon_client.rs  daemon_spawn.rs  daemon_ws.rs  default_browser.rs  dns_blocklist.rs  download.rs  downloaded_browsers.rs  downloaded_browsers_registry.rs  downloader.rs  ephemeral_dirs.rs  extension_manager.rs  extraction.rs  fingerprint_consistency.rs  geoip_downloader.rs  geolocation.rs  group_manager.rs  human_typing.rs  ip_utils.rs  lib.rs  log_redaction.rs  main.rs  mcp_integrations.rs  mcp_server.rs  permissions.rs  platform_browser.rs  (+19 more)
src-tauri/src/camoufox/: config.rs  env_vars.rs  fonts.rs  geolocation.rs  launcher.rs  mod.rs  presets.rs  webgl.rs
src-tauri/src/camoufox/data/: browser-helper-file.json  fingerprint-presets-v135.json  fingerprint-presets-v150.json  fonts.json  headers-order.json  mod.rs
src-tauri/src/camoufox/fingerprint/: bayesian_network.rs  bayesian_node.rs  mod.rs  types.rs
src-tauri/src/daemon/: autostart.rs  mod.rs  services.rs  tray.rs
src-tauri/src/events/: mod.rs
src-tauri/src/profile/: clear_on_close.rs  encryption.rs  manager.rs  mod.rs  password.rs  types.rs
src-tauri/src/sync/: client.rs  encryption.rs  engine.rs  manifest.rs  mod.rs  scheduler.rs  subscription.rs  types.rs
src-tauri/src/vpn/: config.rs  mod.rs  openvpn.rs  openvpn_socks5.rs  socks5_server.rs  storage.rs  tunnel.rs  wireguard.rs
src-tauri/test-assets/: test.tar.bz2  test.tar.xz
src-tauri/tests/: donut_proxy_integration.rs  nodecar_integration.rs  sync_e2e.rs  vpn_integration.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/fixtures/: test.conf  test.ovpn
src-tauri/tests/test_harness/: mod.rs
src/app/: layout.tsx  page.tsx
src/components/: about-dialog.tsx  account-page.tsx  app-update-toast.tsx  bandwidth-mini-chart.tsx  camoufox-config-dialog.tsx  camoufox-deprecation-dialog.tsx  change-version-dialog.tsx  client-providers.tsx  clone-profile-dialog.tsx  close-confirm-dialog.tsx  command-palette.tsx  commercial-trial-modal.tsx  consistency-warning-dialog.tsx  cookie-copy-dialog.tsx  cookie-export-dialog.tsx  cookie-import-dialog.tsx  cookie-management-dialog.tsx  create-group-dialog.tsx  create-profile-dialog.tsx  custom-toast.tsx  data-table-action-bar.tsx  delete-confirmation-dialog.tsx  delete-group-dialog.tsx  device-code-verify-dialog.tsx  dns-blocklist-dialog.tsx  edit-group-dialog.tsx  extension-group-assignment-dialog.tsx  extension-management-dialog.tsx  flag-icon.tsx  group-assignment-dialog.tsx  group-badges.tsx  group-management-dialog.tsx  home-header.tsx  i18n-provider.tsx  import-profile-dialog.tsx  integrations-dialog.tsx  launch-on-login-dialog.tsx  loading-button.tsx  location-proxy-dialog.tsx  multiple-selector.tsx  (+40 more)
src/hooks/: use-app-update-notifications.tsx  use-auto-height.tsx  use-browser-download.ts  use-browser-setup.ts  use-browser-state.ts  use-browser-support.ts  use-cloud-auth.ts  use-commercial-trial.ts  use-controlled-state.ts  use-controlled-state.tsx  use-language.ts  (+13 more)
(+71 files in other folders)
